@@ -1,5 +1,5 @@
 /*
-Copyright (c) 1995-2016 held by the author(s).  All rights reserved.
+Copyright (c) 1995-2008 held by the author(s).  All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions
@@ -33,15 +33,14 @@ POSSIBILITY OF SUCH DAMAGE.
 */
 package viskit.control;
 
-import viskit.view.SimulationRunPanel;
-import edu.nps.util.LogUtilities;
+import viskit.view.RunnerPanel2;
+import edu.nps.util.LogUtils;
 import edu.nps.util.TempFileManager;
 import java.awt.Toolkit;
 import java.awt.datatransfer.Clipboard;
 import java.awt.datatransfer.StringSelection;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
-import java.awt.event.KeyEvent;
 import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
 import java.io.*;
@@ -52,14 +51,14 @@ import javax.swing.*;
 import org.apache.logging.log4j.Logger;
 import simkit.Schedule;
 import viskit.util.TitleListener;
-import viskit.ViskitGlobals;
-import viskit.ViskitStatics;
+import viskit.VGlobals;
+import viskit.VStatics;
 import viskit.assembly.BasicAssembly;
 import viskit.assembly.JTextAreaOutputStream;
 import viskit.model.AnalystReportModel;
 import viskit.model.AssemblyModelImpl;
 
-/** Controller for the Simulation Run panel
+/** Controller for the Assembly Run panel
  *
  * MOVES Institute
  * Naval Postgraduate School, Monterey, CA
@@ -70,31 +69,31 @@ import viskit.model.AssemblyModelImpl;
  * @since 3:43:51 PM
  * @version $Id$
  */
-public class InternalAssemblyRunner implements PropertyChangeListener
-{
-    static final Logger LOG = LogUtilities.getLogger(InternalAssemblyRunner.class);
+public class InternalAssemblyRunner implements PropertyChangeListener {
 
-    /** The name of the basicAssembly to run */
-    String             assemblyClassName;
-    SimulationRunPanel simulationRunPanel;
-    ActionListener     closeListener, saveListener;
-    JMenuBar           myMenuBar;
-    BufferedReader     backChannelBufferedReader;
-    BasicAssembly      basicAssembly;
-    Thread                     simulationRunThread;
-    SimulationRunThreadMonitor simulationRunThreadMonitor;
+    static final Logger LOG = LogUtils.getLogger(InternalAssemblyRunner.class);
+
+    /** The name of the assy to run */
+    String assemblyClassName;
+    RunnerPanel2 runPanel;
+    ActionListener closer, saver;
+    JMenuBar myMenuBar;
+    BufferedReader backChan;
+    Thread simRunner;
+    SimThreadMonitor swingThreadMonitor;
     PipedOutputStream pos;
-    PipedInputStream  pis;
+    PipedInputStream pis;
+    BasicAssembly assembly;
 
     /** external runner saves a file */
-    private String   analystReportTempFile = null;
+    private String analystReportTempFile = null;
     FileOutputStream fos;
-    FileInputStream  fis;
+    FileInputStream fis;
 
-    /** The basicAssembly to be run from java source */
+    /** The assembly to be run from java source */
     Class<?> assemblyClass;
 
-    /** Instance of the basicAssembly to run from java source */
+    /** Instance of the assembly to run from java source */
     Object assemblyInstance;
     private static int mutex = 0;
     private ClassLoader lastLoaderNoReset;
@@ -102,47 +101,37 @@ public class InternalAssemblyRunner implements PropertyChangeListener
 
     /** Captures the original RNG seed state */
     private long[] seeds;
-    private StopListener assemblyRunStopListener;
-
-    private final String namePrefix = "Simulation Run";
-    private String currentTitle = namePrefix;
-
-    StringBuilder npsString = new StringBuilder("<html><body><font color=black>\n" + "<p><b>Now running Replication ");
-	public final static String horizontalRuleEqualSigns = "================================================================================================";
-	public final static String horizontalRuleDashes     = "------------------------------------------------------------------------------------------------";
+    private stopListener assemblyRunStopListener;
 
     /**
-     * The internal logic for the Simulation Run panel
+     * The internal logic for the Assembly Runner panel
      * @param analystReportPanelVisible if true, the analyst report panel will be visible
      */
     public InternalAssemblyRunner(boolean analystReportPanelVisible) {
 
-        saveListener = new SaveListener();
-		String assemblyName = "";
-		if (ViskitGlobals.instance().getActiveAssemblyModel() != null)
-			   assemblyName = ViskitGlobals.instance().getActiveAssemblyModel().getMetadata().name;
+        saver = new saveListener();
 
-        // TODO NOTE:
+        // NOTE:
         // Don't supply rewind or pause buttons on VCR, not hooked up, or working right.
         // false will enable all VCR buttons.  Currently, only start and stop work
-        simulationRunPanel = new SimulationRunPanel(assemblyName, true, analystReportPanelVisible);
-        buildMenus();
-        simulationRunPanel.vcrStop.addActionListener(assemblyRunStopListener = new StopListener());
-        simulationRunPanel.vcrPlay.addActionListener(new StartResumeListener());
-        simulationRunPanel.vcrRewind.addActionListener(new RewindListener());
-        simulationRunPanel.vcrStep.addActionListener(new StepListener());
-        simulationRunPanel.vcrVerboseCB.addActionListener(new VerboseListener());
-        simulationRunPanel.vcrStop.setEnabled(false);
-        simulationRunPanel.vcrPlay.setEnabled(false);
-        simulationRunPanel.vcrRewind.setEnabled(false);
-        simulationRunPanel.vcrStep.setEnabled(false);
+        runPanel = new RunnerPanel2("Assembly Runner", true, analystReportPanelVisible);
+        doMenus();
+        runPanel.vcrStop.addActionListener(assemblyRunStopListener = new stopListener());
+        runPanel.vcrPlay.addActionListener(new startResumeListener());
+        runPanel.vcrRewind.addActionListener(new rewindListener());
+        runPanel.vcrStep.addActionListener(new stepListener());
+        runPanel.vcrVerbose.addActionListener(new verboseListener());
+        runPanel.vcrStop.setEnabled(false);
+        runPanel.vcrPlay.setEnabled(false);
+        runPanel.vcrRewind.setEnabled(false);
+        runPanel.vcrStep.setEnabled(false);
         twiddleButtons(OFF);
 
         // Viskit's current working ClassLoader
-        lastLoaderNoReset = ViskitGlobals.instance().getWorkClassLoader();
+        lastLoaderNoReset = VGlobals.instance().getWorkClassLoader();
     }
 
-    public JComponent getRunnerPanel() {return simulationRunPanel;}
+    public JComponent getRunnerPanel() {return runPanel;}
 
     public JMenuBar getMenus() {
         return myMenuBar;
@@ -153,10 +142,10 @@ public class InternalAssemblyRunner implements PropertyChangeListener
     }
 
     /**
-     * Pre-initialization this runner for a simulation run
-     * @param params arguments to initialize the Simulation runner
+     * Pre-initialize this runner for a sim run
+     * @param params arguments to initialize the Assembly runner
      */
-    public void preInitializeRun(String[] params) {
+    public void preInitRun(String[] params) {
 
 //        for (String s : params) {
 //            LOG.info("VM argument is: " + s);
@@ -165,72 +154,69 @@ public class InternalAssemblyRunner implements PropertyChangeListener
         assemblyClassName = params[AssemblyControllerImpl.EXEC_TARGET_CLASS_NAME];
         doTitle(assemblyClassName);
 
-        simulationRunPanel.vcrSimulationStartTimeTF.setText("0.0");
+        runPanel.vcrSimTime.setText("0.0");
 
         // These values are from the XML file
         boolean defaultVerbose = Boolean.parseBoolean(params[AssemblyControllerImpl.EXEC_VERBOSE_SWITCH]);
-        double defaultStopTime =  Double.parseDouble(params[AssemblyControllerImpl.EXEC_STOPTIME_SWITCH]);
+        double defaultStopTime = Double.parseDouble(params[AssemblyControllerImpl.EXEC_STOPTIME_SWITCH]);
 
         try {
-            fillSimulationRunPanelWidgetsFromPreRunAssembly(defaultVerbose, defaultStopTime);
+            fillRepWidgetsFromPreRunAssy(defaultVerbose, defaultStopTime);
         } catch (Throwable throwable) {
-            (ViskitGlobals.instance().getAssemblyController()).messageToUser(
+            ((AssemblyController)VGlobals.instance().getAssemblyController()).messageUser(
                     JOptionPane.ERROR_MESSAGE,
                     "Java Error",
                     "Error initializing Assembly:\n" + throwable.getMessage());
             twiddleButtons(OFF);
-            throwable.printStackTrace(System.err);
+//            throwable.printStackTrace();
             return;
         }
         twiddleButtons(REWIND);
     }
 
-    private void fillSimulationRunPanelWidgetsFromPreRunAssembly(boolean verbose, double stopTime) throws Throwable {
+    private void fillRepWidgetsFromPreRunAssy(boolean verbose, double stopTime) throws Throwable {
 
-        assemblyClass = ViskitStatics.ClassForName(assemblyClassName);
+        assemblyClass = VStatics.classForName(assemblyClassName);
         if (assemblyClass == null) {
             throw new ClassNotFoundException();
         }
         assemblyInstance = assemblyClass.getDeclaredConstructor().newInstance();
 
-        /* in order to resolve the Assembly as a BasicAssembly, it must be
+        /* in order to resolve the assy as a BasicAssembly, it must be
          * loaded using the the same ClassLoader as the one used to compile
-         * it.  Used in the VerboseListener within the working Viskit
+         * it.  Used in the verboseListener within the working Viskit
          * ClassLoader
          */
-        basicAssembly = (BasicAssembly) assemblyInstance;
+        assembly = (BasicAssembly) assemblyInstance;
 
-		// TODO avoid string references so that method names can be refactored
-        Method getNumberOfReplications   = assemblyClass.getMethod("getNumberOfReplications");
-        Method isSaveReplicationData     = assemblyClass.getMethod("isSaveReplicationData");
+        Method getNumberReplications = assemblyClass.getMethod("getNumberReplications");
+        Method isSaveReplicationData = assemblyClass.getMethod("isSaveReplicationData");
         Method isPrintReplicationReports = assemblyClass.getMethod("isPrintReplicationReports");
-        Method isPrintSummaryReport      = assemblyClass.getMethod("isPrintSummaryReport");
-        Method setVerbose                = assemblyClass.getMethod("setVerbose", boolean.class);
-        Method isVerbose                 = assemblyClass.getMethod("isVerbose");
-        Method setStopTime               = assemblyClass.getMethod("setStopTime", double.class);
-        Method getStopTime               = assemblyClass.getMethod("getStopTime");
+        Method isPrintSummaryReport = assemblyClass.getMethod("isPrintSummaryReport");
+        Method setVerbose = assemblyClass.getMethod("setVerbose", boolean.class);
+        Method isVerbose = assemblyClass.getMethod("isVerbose");
+        Method setStopTime = assemblyClass.getMethod("setStopTime", double.class);
+        Method getStopTime = assemblyClass.getMethod("getStopTime");
 
-//        simulationRunPanel.numberOfReplicationsTF.setText("" + (Integer) getNumberOfReplications.invoke(assemblyInstance));
-        simulationRunPanel.setNumberOfReplications((Integer) getNumberOfReplications.invoke(assemblyInstance)); // TODO refactor further
-		
-        simulationRunPanel.saveReplicationDataCB.setSelected((Boolean) isSaveReplicationData.invoke(assemblyInstance));
-        simulationRunPanel.printReplicationReportsCB.setSelected((Boolean) isPrintReplicationReports.invoke(assemblyInstance));
-        simulationRunPanel.printSummaryReportsCB.setSelected((Boolean) isPrintSummaryReport.invoke(assemblyInstance));
+        runPanel.numRepsTF.setText("" + getNumberReplications.invoke(assemblyInstance));
+        runPanel.saveRepDataCB.setSelected((Boolean) isSaveReplicationData.invoke(assemblyInstance));
+        runPanel.printRepReportsCB.setSelected((Boolean) isPrintReplicationReports.invoke(assemblyInstance));
+        runPanel.printSummReportsCB.setSelected((Boolean) isPrintSummaryReport.invoke(assemblyInstance));
 
-        // Set the run panel according to what the Assembly XML value is
+        // Set the run panel according to what the assy XML value is
         setVerbose.invoke(assemblyInstance, verbose);
-        simulationRunPanel.vcrVerboseCB.setSelected((Boolean) isVerbose.invoke(assemblyInstance));
+        runPanel.vcrVerbose.setSelected((Boolean) isVerbose.invoke(assemblyInstance));
         setStopTime.invoke(assemblyInstance, stopTime);
-        simulationRunPanel.vcrSimulationStopTimeTF.setText("" + (Double) getStopTime.invoke(assemblyInstance));
+        runPanel.vcrStopTime.setText("" + getStopTime.invoke(assemblyInstance));
     }
 
     File tmpFile;
     RandomAccessFile rTmpFile;
     JTextAreaOutputStream textAreaOutputStream;
 
-    protected void initializeRun() {
+    protected void initRun() {
 
-        // ignore multiple pushes of the simulation run button
+        // Prevent multiple pushes of the sim run button
         mutex++;
         if (mutex > 1) {
             return;
@@ -239,8 +225,8 @@ public class InternalAssemblyRunner implements PropertyChangeListener
 
         try {
 
-            ViskitGlobals.instance().resetFreshClassLoader();
-            lastLoaderWithReset = ViskitGlobals.instance().getFreshClassLoader();
+            VGlobals.instance().resetFreshClassLoader();
+            lastLoaderWithReset = VGlobals.instance().getFreshClassLoader();
 
             // Test for Bug 1237
 //            for (String s : ((LocalBootLoader)lastLoaderWithReset).getClassPath()) {
@@ -248,22 +234,22 @@ public class InternalAssemblyRunner implements PropertyChangeListener
 //            }
 //            LOG.info("\n");
 
-            // Now we are in the pure classloader realm where each Assembly run can
+            // Now we are in the pure classloader realm where each assy run can
             // be independent of any other
             assemblyClass = lastLoaderWithReset.loadClass(assemblyClass.getName());
             assemblyInstance = assemblyClass.getDeclaredConstructor().newInstance();
 
-            Method setOutputStream            = assemblyClass.getMethod("setOutputStream", OutputStream.class);
-            Method setNumberOfReplications    = assemblyClass.getMethod("setNumberOfReplications", int.class);
-            Method setSaveReplicationData     = assemblyClass.getMethod("setSaveReplicationData", boolean.class);
+            Method setOutputStream = assemblyClass.getMethod("setOutputStream", OutputStream.class);
+            Method setNumberReplications = assemblyClass.getMethod("setNumberReplications", int.class);
+            Method setSaveReplicationData = assemblyClass.getMethod("setSaveReplicationData", boolean.class);
             Method setPrintReplicationReports = assemblyClass.getMethod("setPrintReplicationReports", boolean.class);
-            Method setPrintSummaryReport      = assemblyClass.getMethod("setPrintSummaryReport", boolean.class);
-            Method setEnableAnalystReports    = assemblyClass.getMethod("setEnableAnalystReports", boolean.class);
-            Method setVerbose                 = assemblyClass.getMethod("setVerbose", boolean.class);
-            Method setStopTime                = assemblyClass.getMethod("setStopTime", double.class);
-            Method setVerboseReplication      = assemblyClass.getMethod("setVerboseReplication", int.class);
-            Method setPclNodeCache            = assemblyClass.getMethod("setPclNodeCache", Map.class);
-            Method addPropertyChangeListener  = assemblyClass.getMethod("addPropertyChangeListener", PropertyChangeListener.class);
+            Method setPrintSummaryReport = assemblyClass.getMethod("setPrintSummaryReport", boolean.class);
+            Method setEnableAnalystReports = assemblyClass.getMethod("setEnableAnalystReports", boolean.class);
+            Method setVerbose = assemblyClass.getMethod("setVerbose", boolean.class);
+            Method setStopTime = assemblyClass.getMethod("setStopTime", double.class);
+            Method setVerboseReplication = assemblyClass.getMethod("setVerboseReplication", int.class);
+            Method setPclNodeCache = assemblyClass.getMethod("setPclNodeCache", Map.class);
+            Method addPropertyChangeListener = assemblyClass.getMethod("addPropertyChangeListener", PropertyChangeListener.class);
 
             // As of discussion held 09 APR 2015, resetting the RNG seed state
             // is not necessary for basic Viskit operation.  Pseudo random
@@ -273,16 +259,16 @@ public class InternalAssemblyRunner implements PropertyChangeListener
             // *** Resetting the RNG seed state ***
             // NOTE: This is currently disabled as the resetSeedStateCB is not
             // enabled nor visible
-            if (simulationRunPanel.resetSeedStateCB.isSelected()) {
+            if (runPanel.resetSeedStateCB.isSelected()) {
 
-                Class<?> rVFactClass = lastLoaderWithReset.loadClass(ViskitStatics.RANDOM_VARIATE_FACTORY_CLASS);
+                Class<?> rVFactClass = lastLoaderWithReset.loadClass(VStatics.RANDOM_VARIATE_FACTORY_CLASS);
                 Method getDefaultRandomNumber = rVFactClass.getMethod("getDefaultRandomNumber");
                 Object rn = getDefaultRandomNumber.invoke(null);
 
                 Method getSeeds = rn.getClass().getMethod("getSeeds");
                 seeds = (long[]) getSeeds.invoke(rn);
 
-                Class<?> rNClass = lastLoaderWithReset.loadClass(ViskitStatics.RANDOM_NUMBER_CLASS_NAME);
+                Class<?> rNClass = lastLoaderWithReset.loadClass(VStatics.RANDOM_NUMBER_CLASS);
                 Method setSeeds = rNClass.getMethod("setSeeds", long[].class);
                 setSeeds.invoke(rn, seeds);
 
@@ -291,17 +277,16 @@ public class InternalAssemblyRunner implements PropertyChangeListener
             }
             // *** End RNG seed state reset ***
 
-            textAreaOutputStream = new JTextAreaOutputStream(simulationRunPanel.simulationOutputTA, 16*1024);
+            textAreaOutputStream = new JTextAreaOutputStream(runPanel.soutTA, 16*1024);
 
-			// TODO fix all indirection that thwarts direct tracing and code refactoring
-            setOutputStream.invoke(           assemblyInstance, textAreaOutputStream);
-            setNumberOfReplications.invoke(   assemblyInstance, simulationRunPanel.getNumberOfReplications());
-            setSaveReplicationData.invoke(    assemblyInstance, simulationRunPanel.saveReplicationDataCB.isSelected());
-            setPrintReplicationReports.invoke(assemblyInstance, simulationRunPanel.printReplicationReportsCB.isSelected());
-            setPrintSummaryReport.invoke(     assemblyInstance, simulationRunPanel.printSummaryReportsCB.isSelected());
+            setOutputStream.invoke(assemblyInstance, textAreaOutputStream);
+            setNumberReplications.invoke(assemblyInstance, Integer.valueOf(runPanel.numRepsTF.getText().trim()));
+            setSaveReplicationData.invoke(assemblyInstance, runPanel.saveRepDataCB.isSelected());
+            setPrintReplicationReports.invoke(assemblyInstance, runPanel.printRepReportsCB.isSelected());
+            setPrintSummaryReport.invoke(assemblyInstance, runPanel.printSummReportsCB.isSelected());
 
             /* DIFF between OA3302 branch and trunk */
-            setEnableAnalystReports.invoke(assemblyInstance, simulationRunPanel.analystReportCB.isSelected());
+            setEnableAnalystReports.invoke(assemblyInstance, runPanel.analystReportCB.isSelected());
             /* End DIFF between OA3302 branch and trunk */
 
             // Allow panel values to override XML set values
@@ -309,13 +294,13 @@ public class InternalAssemblyRunner implements PropertyChangeListener
             setVerbose.invoke(assemblyInstance, getVerbose());
 
             setVerboseReplication.invoke(assemblyInstance, getVerboseReplicationNumber());
-            setPclNodeCache.invoke(assemblyInstance, ((AssemblyModelImpl)ViskitGlobals.instance().getActiveAssemblyModel()).getAssemblyNodeCacheMap());
+            setPclNodeCache.invoke(assemblyInstance, ((AssemblyModelImpl)VGlobals.instance().getActiveAssemblyModel()).getNodeCache());
             addPropertyChangeListener.invoke(assemblyInstance, this);
             assemblyRunnable = (Runnable) assemblyInstance;
 
             // Start the simulation run(s)
-            simulationRunThread = new Thread(assemblyRunnable);
-            new SimulationRunThreadMonitor(simulationRunThread).start();
+            simRunner = new Thread(assemblyRunnable);
+            new SimThreadMonitor(simRunner).start();
 
             // Restore Viskit's working ClassLoader
             Thread.currentThread().setContextClassLoader(lastLoaderNoReset);
@@ -325,19 +310,12 @@ public class InternalAssemblyRunner implements PropertyChangeListener
         }
     }
 
-	/**
-	 * @return the simulationRunMenu
-	 */
-	public JMenu getSimulationRunMenu() {
-		return simulationRunMenu;
-	}
-
     /** Class to perform end of simulation run cleanup items */
-    public class SimulationRunThreadMonitor extends Thread {
+    public class SimThreadMonitor extends Thread {
 
         Thread waitOn;
 
-        public SimulationRunThreadMonitor(Thread toWaitOn) {
+        public SimThreadMonitor(Thread toWaitOn) {
             waitOn = toWaitOn;
         }
 
@@ -348,7 +326,7 @@ public class InternalAssemblyRunner implements PropertyChangeListener
                 waitOn.join();
             } catch (InterruptedException ex) {
                 LOG.error(ex);
-                ex.printStackTrace(System.err);
+//                ex.printStackTrace();
             }
 
             end();
@@ -364,15 +342,10 @@ public class InternalAssemblyRunner implements PropertyChangeListener
         }
 
         /** Perform simulation stop and reset calls */
-        public void end()
-		{
-            System.out.println(horizontalRuleEqualSigns);
-            System.out.println(horizontalRuleEqualSigns);
-            System.out.print  ("Simulation replication");
-			if (simulationRunPanel.getNumberOfReplications() > 1)
-				System.out.print  ("s");
-            System.out.println(" complete.");
-            simulationRunPanel.npsLabel.setText("<html><body><p><b>Replications complete\n</b></p></body></html>");
+        public void end() {
+            System.out.println("Simulation ended");
+            System.out.println("----------------");
+            runPanel.npsLabel.setText("<html><body><p><b>Replications complete\n</b></p></body></html>");
             assemblyRunStopListener.actionPerformed(null);
         }
     }
@@ -390,7 +363,7 @@ public class InternalAssemblyRunner implements PropertyChangeListener
     public int getVerboseReplicationNumber() {
         int ret = -1;
         try {
-            ret = Integer.parseInt(simulationRunPanel.verboseReplicationNumberTF.getText().trim());
+            ret = Integer.parseInt(runPanel.verboseRepNumberTF.getText().trim());
         } catch (NumberFormatException ex) {
           //  ;
         }
@@ -398,17 +371,17 @@ public class InternalAssemblyRunner implements PropertyChangeListener
     }
     PrintWriter pWriter;
 
-    class StartResumeListener implements ActionListener {
+    class startResumeListener implements ActionListener {
 
         @Override
         public void actionPerformed(ActionEvent e) {
-            simulationRunPanel.vcrSimulationStartTimeTF.setText("0.0");    // because no pausing
+            runPanel.vcrSimTime.setText("0.0");    // because no pausing
             twiddleButtons(START);
-            initializeRun();
+            initRun();
         }
     }
 
-    class StepListener implements ActionListener {
+    class stepListener implements ActionListener {
 
         @Override
         public void actionPerformed(ActionEvent e) {
@@ -419,7 +392,7 @@ public class InternalAssemblyRunner implements PropertyChangeListener
     /** Restores the Viskit default ClassLoader after an Assembly compile and
      * run.  Performs a Schedule.coldReset() to clear Simkit for the next run.
      */
-    public class StopListener implements ActionListener {
+    public class stopListener implements ActionListener {
 
         @Override
         public void actionPerformed(ActionEvent e) {
@@ -447,19 +420,19 @@ public class InternalAssemblyRunner implements PropertyChangeListener
             } catch (SecurityException | IllegalArgumentException | NoSuchMethodException | InvocationTargetException | IllegalAccessException ex) {
 
                 // Some screwy stuff can happen here if a user jams around with
-                // the Assembly Initialization button and tabs back and forth
-                // between the Assembly editor and the Simulation Run panel, but it
-                // won't impede a correct Assembly run.  Catch the
+                // the initialize Assy run button and tabs back and forth
+                // between the Assy editor and the Assy runner panel, but it
+                // won't impede a correct Assy run.  Catch the
                 // IllegalArgumentException and move on.
-                LOG.error(ex);
-                ex.printStackTrace(System.err);
+//                LOG.error(ex);
+//                ex.printStackTrace();
             }
 
             twiddleButtons(STOP);
         }
     }
 
-    class RewindListener implements ActionListener {
+    class rewindListener implements ActionListener {
 
         @Override
         public void actionPerformed(ActionEvent e) {
@@ -468,64 +441,47 @@ public class InternalAssemblyRunner implements PropertyChangeListener
     }
 
     /** Allow for overriding XML set value via the Run panel setting */
-    class VerboseListener implements ActionListener {
+    class verboseListener implements ActionListener {
 
         @Override
         public void actionPerformed(ActionEvent e) {
-            if (basicAssembly == null) {return;}
-            basicAssembly.setVerbose(((JCheckBox) e.getSource()).isSelected());
+            if (assembly == null) {return;}
+            assembly.setVerbose(((AbstractButton) e.getSource()).isSelected());
         }
     }
 
     private JFileChooser saveChooser;
 
-    class SaveListener implements ActionListener
-	{
-        @Override
-        public void actionPerformed(ActionEvent e)
-		{
-			if (ViskitGlobals.instance().getCurrentViskitProject() == null)
-				return;
-			ViskitGlobals.instance().getViskitApplicationFrame().displaySimulationRunTab();
-            if (saveChooser == null)
-			{
-                saveChooser = new JFileChooser(ViskitGlobals.instance().getCurrentViskitProject().getProjectRootDirectory());
-                saveChooser.setDialogTitle("Save Assembly Output");
-            }
-			String className = assemblyClassName;
-			if    (className.contains("."))
-				   className = className.substring(className.lastIndexOf(".")+1);
-			File simulationRunOutputDirectory = new File (saveChooser.getCurrentDirectory().getPath() + File.separator + "AnalystReports");
-			if (!simulationRunOutputDirectory.isDirectory())
-				 simulationRunOutputDirectory = saveChooser.getCurrentDirectory();
-            File simulationRunOutputFile = ViskitGlobals.instance().getEventGraphViewFrame().getUniqueName(className + "Output.txt", simulationRunOutputDirectory);
-            saveChooser.setSelectedFile(simulationRunOutputFile); // note that analyst gets to confirm directory destination
+    class saveListener implements ActionListener {
 
-            int returnValue = saveChooser.showSaveDialog(null);
-            if (returnValue != JFileChooser.APPROVE_OPTION)
-			{
+        @Override
+        public void actionPerformed(ActionEvent e) {
+            if (saveChooser == null) {
+                saveChooser = new JFileChooser(VGlobals.instance().getCurrentViskitProject().getProjectRoot());
+            }
+            File fil = VGlobals.instance().getEventGraphEditor().getUniqueName("AssemblyOutput.txt", saveChooser.getCurrentDirectory());
+            saveChooser.setSelectedFile(fil);
+
+            int retv = saveChooser.showSaveDialog(null);
+            if (retv != JFileChooser.APPROVE_OPTION) {
                 return;
             }
 
-            simulationRunOutputFile = saveChooser.getSelectedFile();
-            if (simulationRunOutputFile.exists())
-			{
-                returnValue = JOptionPane.showConfirmDialog(null, "File exists.  Overwrite?", "Confirm",
+            fil = saveChooser.getSelectedFile();
+            if (fil.exists()) {
+                int r = JOptionPane.showConfirmDialog(null, "File exists.  Overwrite?", "Confirm",
                         JOptionPane.YES_NO_OPTION, JOptionPane.WARNING_MESSAGE);
-                if (returnValue != JOptionPane.YES_OPTION)
-				{
+                if (r != JOptionPane.YES_OPTION) {
                     return;
                 }
             }
 
             try {
-                try (BufferedWriter bufferedWriter = new BufferedWriter(new FileWriter(simulationRunOutputFile))) {
-                    bufferedWriter.write(simulationRunPanel.simulationOutputTA.getText());
+                try (BufferedWriter bw = new BufferedWriter(new FileWriter(fil))) {
+                    bw.write(runPanel.soutTA.getText());
                 }
-            } catch (IOException e1)
-			{
-                JOptionPane.showMessageDialog(null, e1.getMessage(), "Input/Output (I/O) Error", JOptionPane.ERROR_MESSAGE);
-				LOG.error("Input/Output (I/O) Error" + "\n" + e1.getMessage());
+            } catch (IOException e1) {
+                JOptionPane.showMessageDialog(null, e1.getMessage(), "I/O Error,", JOptionPane.ERROR_MESSAGE);
             }
         }
     }
@@ -534,26 +490,22 @@ public class InternalAssemblyRunner implements PropertyChangeListener
 
     private void signalAnalystReportReady() {
         if (analystReportTempFile == null) {
-            // No report to print, not yet ready
+            // No report to print
             return;
         }
 
-        AnalystReportController analystReportController = (AnalystReportController) ViskitGlobals.instance().getAnalystReportController();
+        AnalystReportController analystReportController = (AnalystReportController) VGlobals.instance().getAnalystReportController();
         if (analystReportController != null) {
             analystReportController.setReportXML(analystReportTempFile);
 
-            // TODO reconcile showing new report with editing previous report
+            // Switch over to the analyst report tab if we have a report ready
+            // for editing
             AnalystReportModel analystReportModel = (AnalystReportModel) analystReportController.getModel();
-            if (analystReportModel != null && analystReportModel.isReportReady())
-			{
+            if (analystReportModel != null && analystReportModel.isReportReady()) {
+                analystReportController.mainTabbedPane.setSelectedIndex(analystReportController.mainTabbedPaneIdx);
                 analystReportModel.setReportReady(false);
-				// Don't automatically shift to Analyst Report tab, since user often wants to repeat replications and debug
-//              analystReportController.mainTabbedPane.setSelectedIndex(analystReportController.mainTabbedPaneIdx); // original
-//				ViskitGlobals.instance().getViskitApplicationFrame().displayAnalystReportTab();                     // improved
             }
-        } 
-		else
-		{
+        } else {
             JOptionPane.showMessageDialog(null, "<html><body><p align='center'>" +
                     "The Analyst Report tab has not been set to be visible.<br>To " +
                     "view on next Viskit opening, select File -> Settings -> " +
@@ -567,14 +519,14 @@ public class InternalAssemblyRunner implements PropertyChangeListener
      * @return overridden XML set value via the Run panel setting
      */
     double getStopTime() {
-        return Double.parseDouble(simulationRunPanel.vcrSimulationStopTimeTF.getText());
+        return Double.parseDouble(runPanel.vcrStopTime.getText());
     }
 
     /** Allow for overriding XML set value via the Run panel setting
      * @return overridden XML set value via the Run panel setting
      */
     boolean getVerbose() {
-        return simulationRunPanel.vcrVerboseCB.isSelected();
+        return runPanel.vcrVerbose.isSelected();
     }
     public static final int START = 0;
     public static final int STOP = 1;
@@ -586,136 +538,109 @@ public class InternalAssemblyRunner implements PropertyChangeListener
         switch (evnt) {
             case START:
                 //System.out.println("twbutt start");
-                simulationRunPanel.vcrPlay.setEnabled(false);
-                simulationRunPanel.vcrStop.setEnabled(true);
-                simulationRunPanel.vcrStep.setEnabled(false);
-                simulationRunPanel.vcrRewind.setEnabled(false);
+                runPanel.vcrPlay.setEnabled(false);
+                runPanel.vcrStop.setEnabled(true);
+                runPanel.vcrStep.setEnabled(false);
+                runPanel.vcrRewind.setEnabled(false);
                 break;
             case STOP:
                 //System.out.println("twbutt stop");
-                simulationRunPanel.vcrPlay.setEnabled(true);
-                simulationRunPanel.vcrStop.setEnabled(false);
-                simulationRunPanel.vcrStep.setEnabled(true);
-                simulationRunPanel.vcrRewind.setEnabled(true);
+                runPanel.vcrPlay.setEnabled(true);
+                runPanel.vcrStop.setEnabled(false);
+                runPanel.vcrStep.setEnabled(true);
+                runPanel.vcrRewind.setEnabled(true);
                 break;
             case STEP:
                 //System.out.println("twbutt step");
-                simulationRunPanel.vcrPlay.setEnabled(false);
-                simulationRunPanel.vcrStop.setEnabled(true);
-                simulationRunPanel.vcrStep.setEnabled(false);
-                simulationRunPanel.vcrRewind.setEnabled(false);
+                runPanel.vcrPlay.setEnabled(false);
+                runPanel.vcrStop.setEnabled(true);
+                runPanel.vcrStep.setEnabled(false);
+                runPanel.vcrRewind.setEnabled(false);
                 break;
             case REWIND:
                 //System.out.println("twbutt rewind");
-                simulationRunPanel.vcrPlay.setEnabled(true);
-                simulationRunPanel.vcrStop.setEnabled(false);
-                simulationRunPanel.vcrStep.setEnabled(true);
-                simulationRunPanel.vcrRewind.setEnabled(false);
+                runPanel.vcrPlay.setEnabled(true);
+                runPanel.vcrStop.setEnabled(false);
+                runPanel.vcrStep.setEnabled(true);
+                runPanel.vcrRewind.setEnabled(false);
                 break;
             case OFF:
                 //System.out.println("twbutt off");
-                simulationRunPanel.vcrPlay.setEnabled(false);
-                simulationRunPanel.vcrStop.setEnabled(false);
-                simulationRunPanel.vcrStep.setEnabled(false);
-                simulationRunPanel.vcrRewind.setEnabled(false);
+                runPanel.vcrPlay.setEnabled(false);
+                runPanel.vcrStop.setEnabled(false);
+                runPanel.vcrStep.setEnabled(false);
+                runPanel.vcrRewind.setEnabled(false);
                 break;
             default:
-                LOG.error("Bad event in InternalAssemblyRunner");
+                System.err.println("Bad event in InternalAssemblyRunner");
                 break;
         }
     }
-	
-    private JMenu  simulationRunMenu;
-	
-    private void buildMenus() 
-	{
-		// TODO use buildMI method, add hotkeys
-        simulationRunMenu = new JMenu("Simulation Run");
-		simulationRunMenu.setMnemonic(KeyEvent.VK_S);
-        JMenuItem  saveOutputMI = new JMenuItem("Save simulation output to text file");
-        JMenuItem  viewOutputMI = new JMenuItem("View simulation output in text editor");
-        JMenuItem clearOutputMI = new JMenuItem("Clear simulation output");
-		
-        JMenu         editMenu = new JMenu("Edit");
-        JMenuItem       copyMI = new JMenuItem("Copy");
-        JMenuItem  selectAllMI = new JMenuItem("Select all"); // TODO move to EventGraph and Assembly menus
-        JMenuItem   clearAllMI = new JMenuItem("Clear all");
 
-        saveOutputMI.addActionListener(saveListener);
-        viewOutputMI.addActionListener(new ViewOutputListener());
-       clearOutputMI.addActionListener(new ClearListener());
-              copyMI.addActionListener(new CopyListener());
-         selectAllMI.addActionListener(new SelectAllListener());
-          clearAllMI.addActionListener(new ClearListener());
-		
-   simulationRunMenu.setMnemonic(KeyEvent.VK_S);
-	    saveOutputMI.setMnemonic(KeyEvent.VK_S); // submenu item
-		viewOutputMI.setMnemonic(KeyEvent.VK_V); // submenu item
-	   clearOutputMI.setMnemonic(KeyEvent.VK_C); // submenu item
-		
-		    editMenu.setMnemonic(KeyEvent.VK_E);
-		      copyMI.setMnemonic(KeyEvent.VK_C); // submenu
-		 selectAllMI.setMnemonic(KeyEvent.VK_A); // submenu
-		  clearAllMI.setMnemonic(KeyEvent.VK_L); // submenu
-
-//        fileMenu.addSeparator();
-//        fileMenu.add(new JMenuItem("Settings"));
-
-        simulationRunMenu.add(saveOutputMI);
-        simulationRunMenu.add(viewOutputMI);
-        simulationRunMenu.add(clearOutputMI);
-
-         editMenu.add(copyMI);
-         editMenu.add(selectAllMI);
-         editMenu.add(clearAllMI);
-		 
+    private void doMenus() {
         myMenuBar = new JMenuBar();
-        myMenuBar.add(simulationRunMenu);
-        myMenuBar.add(editMenu);
+        JMenu file = new JMenu("File");
+        JMenuItem save = new JMenuItem("Save output streams");
+        JMenu edit = new JMenu("Edit");
+        JMenuItem copy = new JMenuItem("Copy");
+        JMenuItem selAll = new JMenuItem("Select all");
+        JMenuItem clrAll = new JMenuItem("Clear all");
+        JMenuItem view = new JMenuItem("View output in text editor");
+
+        save.addActionListener(saver);
+        copy.addActionListener(new copyListener());
+        selAll.addActionListener(new selectAllListener());
+        clrAll.addActionListener(new clearListener());
+        view.addActionListener(new viewListener());
+
+        file.add(save);
+        file.add(view);
+
+        file.addSeparator();
+        file.add(new JMenuItem("Settings"));
+
+        edit.add(copy);
+        edit.add(selAll);
+        edit.add(clrAll);
+        myMenuBar.add(file);
+        myMenuBar.add(edit);
     }
 
-    class CopyListener implements ActionListener
-	{
+    class copyListener implements ActionListener {
+
         @Override
         public void actionPerformed(ActionEvent e) {
-            String s = simulationRunPanel.simulationOutputTA.getSelectedText();
+            String s = runPanel.soutTA.getSelectedText();
             StringSelection ss = new StringSelection(s);
             Clipboard clpbd = Toolkit.getDefaultToolkit().getSystemClipboard();
             clpbd.setContents(ss, ss);
         }
     }
 
-    class SelectAllListener implements ActionListener
-	{
+    class selectAllListener implements ActionListener {
+
         @Override
         public void actionPerformed(ActionEvent e) {
-            simulationRunPanel.simulationOutputTA.requestFocus();
-            simulationRunPanel.simulationOutputTA.selectAll();
+            runPanel.soutTA.requestFocus();
+            runPanel.soutTA.selectAll();
         }
     }
 
-    class ClearListener implements ActionListener
-	{
+    class clearListener implements ActionListener {
+
         @Override
-        public void actionPerformed(ActionEvent e)
-		{
-			ViskitGlobals.instance().getViskitApplicationFrame().displaySimulationRunTab();
-            int returnValue = ViskitGlobals.instance().getAssemblyEditViewFrame().genericAskYN("Are you sure?", "Do you really want to clear the Simulation Run output?");
-            if (returnValue == JOptionPane.OK_OPTION)
-			{
-				simulationRunPanel.simulationOutputTA.setText("");
-			}
+        public void actionPerformed(ActionEvent e) {
+            runPanel.soutTA.setText(null);
         }
     }
 
-    class ViewOutputListener implements ActionListener
+    class viewListener implements ActionListener
     {
         @Override
         public void actionPerformed(ActionEvent e)
         {
-			ViskitGlobals.instance().getViskitApplicationFrame().displaySimulationRunTab();
             File f; // = tmpFile;
-            String osName = ViskitStatics.OPERATING_SYSTEM;
+            String osName = VStatics.OPERATING_SYSTEM;
             String filePath = "";
             String tool;
             if (osName.toLowerCase().contains("win")) {
@@ -726,7 +651,7 @@ public class InternalAssemblyRunner implements PropertyChangeListener
                 tool = "gedit"; // assuming Linux here
             }
 
-            String s = simulationRunPanel.simulationOutputTA.getText().trim();
+            String s = runPanel.soutTA.getText().trim();
             try {
                 f = TempFileManager.createTempFile("ViskitOutput", ".txt");
                 f.deleteOnExit();
@@ -740,46 +665,51 @@ public class InternalAssemblyRunner implements PropertyChangeListener
             }
             catch (UnsupportedOperationException ex) {
               try {
-                  Runtime.getRuntime().exec(tool + " " + filePath);
+                  Runtime.getRuntime().exec(new String[] {tool + " " + filePath});
               }
               catch (IOException ex1) {
                   LOG.error(ex1);
-                  ex1.printStackTrace(System.err);
+//                  ex1.printStackTrace();
               }
             }
         }
     }
 
-    private TitleListener titleListener;
-    private int titlekey;
-	
-    private void doTitle(String name) {
-        if (name != null && name.length() > 0) {
-            currentTitle = namePrefix + ": " + name;
+    private String namePrefix = "Viskit Assembly Runner";
+    private String currentTitle = namePrefix;
+
+    private void doTitle(String nm) {
+        if (nm != null && nm.length() > 0) {
+            currentTitle = namePrefix + ": " + nm;
         }
 
-        if (titleListener != null) {
-            titleListener.setTitle(currentTitle, titlekey);
+        if (titlList != null) {
+            titlList.setTitle(currentTitle, titlkey);
         }
     }
-    public void setTitleListener(TitleListener listener, int key) {
-        titleListener = listener;
-        titlekey = key;
-//        doTitle(null); // don't blow away title while setting up listener, let it be set elsewhere
+    private TitleListener titlList;
+    private int titlkey;
+
+    public void setTitleListener(TitleListener lis, int key) {
+        titlList = lis;
+        titlkey = key;
+        doTitle(null);
     }
+
+    StringBuilder npsString = new StringBuilder("<html><body><font color=black>\n" + "<p><b>Now Running Replication ");
 
     @Override
-    public void propertyChange(PropertyChangeEvent propertyChangeEvent) {
-        LOG.debug(propertyChangeEvent.getPropertyName() + ": old=" + propertyChangeEvent.getOldValue() + ", new=" + propertyChangeEvent.getNewValue());
+    public void propertyChange(PropertyChangeEvent evt) {
+        LOG.debug(evt.getPropertyName());
 
-        if (propertyChangeEvent.getPropertyName().equals("replicationNumber")) {
+        if (evt.getPropertyName().equals("replicationNumber")) {
             int beginLength = npsString.length();
-            npsString.append(propertyChangeEvent.getNewValue());
+            npsString.append(evt.getNewValue());
             npsString.append(" of ");
-            npsString.append(simulationRunPanel.getNumberOfReplications());
+            npsString.append(Integer.parseInt(runPanel.numRepsTF.getText()));
             npsString.append("</b>\n");
             npsString.append("</font></p></body></html>\n");
-            simulationRunPanel.npsLabel.setText(npsString.toString());
+            runPanel.npsLabel.setText(npsString.toString());
 
             // reset for the next replication output
             npsString.delete(beginLength, npsString.length());
