@@ -1,11 +1,12 @@
 package viskit.xsd.cli;
 
-import edu.nps.util.LogUtilities;
+import edu.nps.util.LogUtils;
 import edu.nps.util.TempFileManager;
 import java.io.*;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.*;
@@ -13,16 +14,15 @@ import java.util.jar.JarEntry;
 import java.util.jar.JarInputStream;
 import java.util.jar.JarOutputStream;
 import org.apache.logging.log4j.Logger;
-import viskit.ViskitGlobals;
-import viskit.ViskitStatics;
+import viskit.VGlobals;
+import viskit.VStatics;
 import viskit.xsd.translator.assembly.SimkitAssemblyXML2Java;
-import viskit.xsd.translator.eventgraph.SimkitEventGraphXML2Java;
+import viskit.xsd.translator.eventgraph.SimkitXML2Java;
 
-public class Launcher extends Thread implements Runnable
-{
-    static final Logger LOG = LogUtilities.getLogger(Launcher.class);
+public class Launcher extends Thread implements Runnable {
 
-    static ClassLoader classLoader;
+    static ClassLoader cloader;
+    static Logger log = LogUtils.getLogger(Launcher.class);
     String assembly = null;
     String assemblyName;
     Hashtable<String, String> eventGraphs = new Hashtable<>();
@@ -41,12 +41,12 @@ public class Launcher extends Thread implements Runnable
             while (a < args.length - 1) {
                 switch (args[a]) {
                     case "-A":
-                        u = new URL(args[a + 1]);
+                        u = new URI(args[a + 1]).toURL();
                         setAssembly(u);
                         a += 2;
                         break;
                     case "-E":
-                        u = new URL(args[a + 1]);
+                        u = new URI(args[a + 1]).toURL();
                         addEventGraph(u);
                         a += 2;
                         break;
@@ -63,7 +63,7 @@ public class Launcher extends Thread implements Runnable
             }
 
         } catch (Exception e) {
-            LOG.error(e);
+            log.error(e);
         }
     }
 
@@ -72,8 +72,8 @@ public class Launcher extends Thread implements Runnable
         try {
             URL u;
 
-            classLoader = ViskitGlobals.instance().getWorkClassLoader();
-            InputStream configIn = classLoader.getResourceAsStream("config.properties");
+            cloader = VGlobals.instance().getWorkClassLoader();
+            InputStream configIn = cloader.getResourceAsStream("config.properties");
             Properties p = new Properties();
             p.load(configIn);
 
@@ -83,9 +83,9 @@ public class Launcher extends Thread implements Runnable
                 // a specific directory is more automated
                 String eventGraphDir = p.getProperty("EventGraphDir");
                 eventGraphDir = (eventGraphDir == null) ? "?" : eventGraphDir;
-                LOG.info("eventGraphDir is " + eventGraphDir);
-                if (classLoader instanceof Boot) {
-                    Boot b = (Boot) classLoader;
+                log.info("eventGraphDir is " + eventGraphDir);
+                if (cloader instanceof Boot) {
+                    Boot b = (Boot) cloader;
                     u = b.baseJarURL;
                     URLConnection urlc = u.openConnection();
                     JarInputStream jis = new JarInputStream(urlc.getInputStream());
@@ -95,7 +95,7 @@ public class Launcher extends Thread implements Runnable
 
                         // Assemblies are foreced to be identified with "Assembly" in the file name
                         if (name.contains(eventGraphDir) && name.endsWith("xml") && !name.contains("Assembly") ) {
-                            LOG.info("Loading EventGraph from: " + name);
+                            log.info("Loading EventGraph from: " + name);
                             addEventGraph(jis);
                         }
                     }
@@ -118,7 +118,7 @@ public class Launcher extends Thread implements Runnable
                 Properties p = System.getProperties();
                 p.load(is);
                  */
-                Process pr = Runtime.getRuntime().exec("env");
+                Process pr = Runtime.getRuntime().exec(new String[] {"env"});
                 InputStream is = pr.getInputStream();
                 InputStreamReader isr = new InputStreamReader(is);
                 BufferedReader br = new BufferedReader(isr);
@@ -148,26 +148,26 @@ public class Launcher extends Thread implements Runnable
                 if (p.getProperty("Port") != null) {
                     launchGridkit(p.getProperty("Port"));
                 } else if (p.getProperty("Assembly") != null) {
-                    LOG.debug("Running Assembly " + p.getProperty("Assembly"));
-                    u = classLoader.getResource(p.getProperty("Assembly"));
-                    LOG.debug("From URL: " + u);
+                    log.debug("Running Assembly " + p.getProperty("Assembly"));
+                    u = cloader.getResource(p.getProperty("Assembly"));
+                    log.debug("From URL: " + u);
                     setAssembly(u);
                     // EventGraphs can also be dropped onto the top-level dir
                     // as long as they are enumerated
                     StringTokenizer st = new StringTokenizer(p.getProperty("EventGraphs"));
                     while (st.hasMoreTokens()) {
-                        u = classLoader.getResource(st.nextToken());
+                        u = cloader.getResource(st.nextToken());
                         addEventGraph(u);
                     }
-                } else if (p.getProperty("Viskit") != null) { // TODO!! check string property correct
+                } else if (p.getProperty("Viskit") != null) {
                     launchGUI();
                 }
             } catch (Exception e) {
-                LOG.error(e);
+                log.error(e);
             }
 
         } catch (IOException e) {
-            LOG.error(e);
+            log.error(e);
         }
     }
 
@@ -186,38 +186,38 @@ public class Launcher extends Thread implements Runnable
         }
         assembly = xml.toString();
 
-        LOG.debug("Assembly XML" + xml.toString());
+        log.debug("Assembly XML" + xml.toString());
 
         // get the class name as defined in the XML
-        LOG.debug("Trying ClassLoader " + classLoader);
+        log.debug("Trying ClassLoader " + cloader);
 
         ByteArrayInputStream bais = new ByteArrayInputStream(xml.toString().getBytes());
 
-        if (classLoader instanceof java.net.URLClassLoader) {
-            URL[] usz = ((java.net.URLClassLoader) classLoader).getURLs();
+        if (cloader instanceof java.net.URLClassLoader) {
+            URL[] usz = ((java.net.URLClassLoader) cloader).getURLs();
             for (URL usz1 : usz) {
-                LOG.debug("URL " + usz1.toString());
+                log.debug("URL " + usz1.toString());
             }
         }
 
         // create a jaxb context to obtain the name field from the assembly
-        Class<?> jclz = classLoader.loadClass("javax.xml.bind.JAXBContext");
+        Class<?> jclz = cloader.loadClass("javax.xml.bind.JAXBContext");
         Method m = jclz.getDeclaredMethod("newInstance", new Class<?>[]{String.class, ClassLoader.class});
-        Object jco = m.invoke(null, new Object[]{SimkitAssemblyXML2Java.ASSEMBLY_BINDINGS, classLoader});
+        Object jco = m.invoke(null, new Object[]{SimkitAssemblyXML2Java.ASSEMBLY_BINDINGS, cloader});
         m = jclz.getDeclaredMethod("createUnmarshaller", new Class<?>[]{});
         Object umo = m.invoke(jco, new Object[]{});
 
         // unmarshal the xml to java bindings
-        jclz = classLoader.loadClass("javax.xml.bind.Unmarshaller");
+        jclz = cloader.loadClass("javax.xml.bind.Unmarshaller");
         m = jclz.getDeclaredMethod("unmarshal", new Class<?>[]{InputStream.class});
         Object assemblyJaxb = m.invoke(umo, new Object[]{bais});
 
         // get the root node of the assembly and obtain name of assembly
-        jclz = classLoader.loadClass("viskit.xsd.bindings.assembly.SimkitAssembly");
+        jclz = cloader.loadClass("viskit.xsd.bindings.assembly.SimkitAssembly");
         m = jclz.getDeclaredMethod("getPackage", new Class<?>[]{});
         assemblyName = (String) m.invoke(assemblyJaxb, new Object[]{});
         m = jclz.getDeclaredMethod("getName", new Class<?>[]{});
-        assemblyName += "." + (String) m.invoke(assemblyJaxb, new Object[]{});
+        assemblyName += "." + m.invoke(assemblyJaxb, new Object[]{});
 
     }
 
@@ -240,29 +240,29 @@ public class Launcher extends Thread implements Runnable
         try {
             // get the class name as defined in the XML
             ByteArrayInputStream bais = new ByteArrayInputStream(xml.toString().getBytes());
-            Class<?> jclz = classLoader.loadClass("javax.xml.bind.JAXBContext");
+            Class<?> jclz = cloader.loadClass("javax.xml.bind.JAXBContext");
             Method m = jclz.getDeclaredMethod("newInstance", new Class<?>[]{String.class, ClassLoader.class});
-            Object jco = m.invoke(null, new Object[]{SimkitEventGraphXML2Java.EVENT_GRAPH_BINDINGS, classLoader});
+            Object jco = m.invoke(null, new Object[]{SimkitXML2Java.EVENT_GRAPH_BINDINGS, cloader});
             m = jclz.getDeclaredMethod("createUnmarshaller", new Class<?>[]{});
             Object umo = m.invoke(jco, new Object[]{});
 
-            jclz = classLoader.loadClass("javax.xml.bind.Unmarshaller");
+            jclz = cloader.loadClass("javax.xml.bind.Unmarshaller");
             m = jclz.getDeclaredMethod("unmarshal", new Class<?>[]{InputStream.class});
             Object eventgraph = m.invoke(umo, new Object[]{bais});
 
-            jclz = classLoader.loadClass(SimkitEventGraphXML2Java.EVENT_GRAPH_BINDINGS + ".SimEntity");
+            jclz = cloader.loadClass(SimkitXML2Java.EVENT_GRAPH_BINDINGS + ".SimEntity");
             m = jclz.getDeclaredMethod("getPackage", new Class<?>[]{});
             String eventGraphName = (String) m.invoke(eventgraph, new Object[]{});
             m = jclz.getDeclaredMethod("getName", new Class<?>[]{});
             eventGraphName += "." + m.invoke(eventgraph, new Object[]{});
 
             eventGraphs.put(eventGraphName, xml.toString());
-            LOG.debug(eventGraphName + "EventGraph XML");
-            LOG.debug(xml.toString());
+            log.debug(eventGraphName + "EventGraph XML");
+            log.debug(xml.toString());
 
         // silent this may not be an event-graph xml
         } catch (ClassNotFoundException | NoSuchMethodException | SecurityException | IllegalAccessException | IllegalArgumentException | InvocationTargetException e) {
-            LOG.error(e);
+            log.error(e);
         }
 
     }
@@ -282,7 +282,7 @@ public class Launcher extends Thread implements Runnable
             }
 
         } catch (Exception e) {
-            LOG.error(e);
+            log.error(e);
         }
     }
 
@@ -294,7 +294,7 @@ public class Launcher extends Thread implements Runnable
                 execInterpreted();
             }
         } catch (Exception e) {
-            LOG.error(e);
+            log.error(e);
         }
     }
 
@@ -303,7 +303,7 @@ public class Launcher extends Thread implements Runnable
             compile();
             if (assemblyName != null) {
                 // run it
-                Class<?> asmz = classLoader.loadClass(assemblyName);
+                Class<?> asmz = cloader.loadClass(assemblyName);
                 Constructor<?> c = asmz.getConstructor(new Class<?>[]{});
                 Object out = c.newInstance(new Object[]{});
                 Thread t = new Thread((Runnable) out);
@@ -311,7 +311,7 @@ public class Launcher extends Thread implements Runnable
                 t.join();
             }
         } catch (Exception e) {
-            LOG.error(e);
+            log.error(e);
         }
     }
 
@@ -329,10 +329,10 @@ public class Launcher extends Thread implements Runnable
         String assemblyJava;
         File tempDir;
 
-        xml2jz = classLoader.loadClass("viskit.xsd.translator.eventgraph.SimkitXML2Java");
-        axml2jz = classLoader.loadClass("viskit.xsd.translator.assembly.SimkitAssemblyXML2Java");
-        assyContlr = classLoader.loadClass("viskit.control.AssemblyController");
-        tempDirz = classLoader.loadClass("viskit.VGlobals");
+        xml2jz = cloader.loadClass("viskit.xsd.translator.eventgraph.SimkitXML2Java");
+        axml2jz = cloader.loadClass("viskit.xsd.translator.assembly.SimkitAssemblyXML2Java");
+        assyContlr = cloader.loadClass("viskit.control.AssemblyController");
+        tempDirz = cloader.loadClass("viskit.VGlobals");
 
         try {
 
@@ -355,7 +355,7 @@ public class Launcher extends Thread implements Runnable
                     out = m.invoke(out, new Object[]{});
                     eventGraphJava = (String) out;
 
-                    LOG.debug(eventGraphJava);
+                    log.debug(eventGraphJava);
 
                     // these could be handled by viskit.AssemblyController.createJavaClassFromString()
                     // since it is not likely to be run in Grid mode here, if at all, so no worries
@@ -372,13 +372,13 @@ public class Launcher extends Thread implements Runnable
 
                     m = assyContlr.getDeclaredMethod("compileJavaClassFromString", new Class<?>[]{String.class});
 
-                    LOG.info("Generating Java Bytecode...");
+                    log.info("Generating Java Bytecode...");
 
                     // This will now generate source and byte code and place each
                     // in thier respective ${viskit.project}/build directories,
                     // once for src and one for classes
                     if (m.invoke(null, new Object[]{eventGraphJava}) != null) {
-                        LOG.info("Compilation of " + eventGraphName + " complete.");
+                        log.info("Compilation of " + eventGraphName + " complete.");
                     }
 
                     //normal to have exception as eventGraphs
@@ -387,7 +387,7 @@ public class Launcher extends Thread implements Runnable
                     //include assemblies. must be caught though
                     //and ingored
                 } catch (NoSuchMethodException | SecurityException | InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException ex) {
-                    LOG.error(ex);
+                    log.error(ex);
                 }
             }
 
@@ -404,11 +404,11 @@ public class Launcher extends Thread implements Runnable
                 out = m.invoke(out, new Object[]{});
                 assemblyJava = (String) out;
 
-                LOG.debug(assemblyJava);
+                log.debug(assemblyJava);
 
-                LOG.info("Generating Java Bytecode...");
+                log.info("Generating Java Bytecode...");
                 if (m.invoke(null, new Object[]{assemblyJava}) != null) {
-                    LOG.info("Compilation of assembly complete.");
+                    log.info("Compilation of assembly complete.");
                 }
             }
 
@@ -419,16 +419,16 @@ public class Launcher extends Thread implements Runnable
             tempDir = (File) m.invoke(out, new Object[]{});
 
             File jarFromDir = makeJarFileFromDir(tempDir);
-            URL url = new URL("file:" + File.separator + File.separator + jarFromDir.getCanonicalPath() + File.separator);
+            URL url = new URI("file:" + File.separator + File.separator + jarFromDir.getCanonicalPath() + File.separator).toURL();
             // if these path-jammers don't work, then will need to define classes directly in the classloader
             // via bytes. url here is the file:\/\/+ canonical path from above to tempDir
-            ((Boot) classLoader).addURL(url);
+            ((Boot) cloader).addURL(url);
             // jam the classpath with the new directory
             System.setProperty("java.class.path", System.getProperty("java.class.path") + File.pathSeparator + jarFromDir.getCanonicalPath());
-            LOG.debug(System.getProperty("java.class.path"));
+            log.debug(System.getProperty("java.class.path"));
 
         } catch (NoSuchMethodException | SecurityException | InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException ex) {
-            LOG.error(ex);
+            log.error(ex);
         }
     }
 
@@ -445,10 +445,10 @@ public class Launcher extends Thread implements Runnable
         ByteArrayInputStream bais;
         String assemblyJava;
 
-        xml2jz = classLoader.loadClass("viskit.xsd.translator.eventgraph.SimkitXML2Java");
-        axml2jz = classLoader.loadClass("viskit.xsd.translator.assembly.SimkitAssemblyXML2Java");
-        bshz = classLoader.loadClass("bsh.Interpreter");
-        bshcmz = classLoader.loadClass("bsh.BshClassManager");
+        xml2jz = cloader.loadClass("viskit.xsd.translator.eventgraph.SimkitXML2Java");
+        axml2jz = cloader.loadClass("viskit.xsd.translator.assembly.SimkitAssemblyXML2Java");
+        bshz = cloader.loadClass("bsh.Interpreter");
+        bshcmz = cloader.loadClass("bsh.BshClassManager");
 
         c = bshz.getConstructor(new Class<?>[]{});
         bsh = c.newInstance(new Object[]{});
@@ -457,7 +457,7 @@ public class Launcher extends Thread implements Runnable
         bshcm = m.invoke(bsh, new Object[]{});
         m = bshcmz.getDeclaredMethod("classExists", new Class<?>[]{String.class});
         out = m.invoke(bshcm, new Object[]{"viskit.xsd.translator.assembly.BasicAssembly"});
-        LOG.debug("Checking if viskit.assembly.BasicAssembly exists... " + ((Boolean) out).toString());
+        log.debug("Checking if viskit.assembly.BasicAssembly exists... " + out.toString());
 
         try {
             Enumeration<String> e = eventGraphs.keys();
@@ -477,7 +477,7 @@ public class Launcher extends Thread implements Runnable
                 m = out.getClass().getDeclaredMethod("translate", new Class<?>[]{});
                 out = m.invoke(out, new Object[]{});
                 eventGraphJava = (String) out;
-                LOG.debug(eventGraphJava);
+                log.debug(eventGraphJava);
 
                 // bsh eval generated java source
                 m = bshz.getDeclaredMethod("eval", new Class<?>[]{String.class});
@@ -486,7 +486,7 @@ public class Launcher extends Thread implements Runnable
                 // sanity check bsh if eventGraph class exists
                 m = bshcmz.getDeclaredMethod("classExists", new Class<?>[]{String.class});
                 out = m.invoke(bshcm, new Object[]{eventGraphName});
-                System.out.println("Checking if " + eventGraphName + " exists... " + ((Boolean) out).toString());
+                System.out.println("Checking if " + eventGraphName + " exists... " + out.toString());
             }
 
             // unmarshal assembly xml
@@ -500,7 +500,7 @@ public class Launcher extends Thread implements Runnable
             m = axml2jz.getDeclaredMethod("translate", new Class<?>[]{});
             out = m.invoke(out, new Object[]{});
             assemblyJava = (String) out;
-            LOG.debug(assemblyJava);
+            log.debug(assemblyJava);
 
             // bsh eval the generated source
             m = bshz.getDeclaredMethod("eval", new Class<?>[]{String.class});
@@ -512,9 +512,9 @@ public class Launcher extends Thread implements Runnable
             // sanity check the bsh class loaders if assembly exists
             m = bshcmz.getDeclaredMethod("classExists", new Class<?>[]{String.class});
             out = m.invoke(bshcm, new Object[]{assemblyName});
-            LOG.debug("Checking if " + assemblyName + " exists... " + ((Boolean) out).toString());
-            out = m.invoke(bshcm, new Object[]{ViskitStatics.RANDOM_VARIATE_FACTORY_CLASS});
-            LOG.debug("Checking if simkit.random.RandomVariateFactory exists... " + ((Boolean) out).toString());
+            log.debug("Checking if " + assemblyName + " exists... " + out.toString());
+            out = m.invoke(bshcm, new Object[]{VStatics.RANDOM_VARIATE_FACTORY_CLASS});
+            log.debug("Checking if simkit.random.RandomVariateFactory exists... " + out.toString());
 
             // get the assembly class, create instance and thread it
             m = bshcmz.getDeclaredMethod("classForName", new Class<?>[]{String.class});
@@ -532,7 +532,7 @@ public class Launcher extends Thread implements Runnable
         //((Thread)out).start();
 
         } catch (NoSuchMethodException | SecurityException | InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException ex) {
-            LOG.error(ex);
+            log.error(ex);
         }
 
     /*
@@ -544,7 +544,7 @@ public class Launcher extends Thread implements Runnable
     if (bsh.getClassManager().classExists("simkit.BasicAssembly")) System.out.println("simkit.BasicAssembly found");
     else System.out.println("simkit.BasicAssembly not found");
     try {
-    bsh.eval("DEBUG();");
+    bsh.eval("debug();");
     // load eventGraph XML as classes
     // since we've overridden the default bsh ClassLoader, need to
     // add the defined class in this ClassLoader
@@ -553,13 +553,13 @@ public class Launcher extends Thread implements Runnable
     String eventGraphName = (String) (e.nextElement());
     String eventGraph = (String)eventGraphs.get(eventGraphName);
     bais = new ByteArrayInputStream(eventGraph.getBytes());
-    Class clz = classLoader.loadClass("viskit.xsd.translator.eventgraph.SimkitEventGraphXML2Java");
+    Class clz = cloader.loadClass("viskit.xsd.translator.eventgraph.SimkitXML2Java");
     Constructor cnstr = clz.getConstructor( new Class<?>[] { InputStream.class } );
-    //xml2j = new SimkitEventGraphXML2Java(bais);
-    xml2j = (SimkitEventGraphXML2Java)cnstr.newInstance( new Object[] { bais } );
+    //xml2j = new SimkitXML2Java(bais);
+    xml2j = (SimkitXML2Java)cnstr.newInstance( new Object[] { bais } );
     xml2j.unmarshal();
     bsh.eval(xml2j.translate());
-    if (DEBUG) {
+    if (debug) {
     System.out.println("Bsh eval of:");
     System.out.println(xml2j.translate());
     }
@@ -568,84 +568,16 @@ public class Launcher extends Thread implements Runnable
     // and could conflict with the one beanshell last used to
     // eval the string (?)
     eventGraphs.put(eventGraphName, evgc);
-    if (DEBUG) System.out.println("Eventgraph class added: "+eventGraphName+ " "+evgc);
+    if (debug) System.out.println("Eventgraph class added: "+eventGraphName+ " "+evgc);
     }
     // now any and all dependencies are loaded for the assembly
     bais = new ByteArrayInputStream(assembly.getBytes());
-    Class clz = classLoader.loadClass("viskit.xsd.translator.assembly.SimkitAssemblyXML2Java");
+    Class clz = cloader.loadClass("viskit.xsd.translator.assembly.SimkitAssemblyXML2Java");
     Constructor cnstr = clz.getConstructor( new Class<?>[] { InputStream.class } );
     axml2j = (SimkitAssemblyXML2Java)cnstr.newInstance( new Object[] { bais } );
     axml2j.unmarshal();
     bsh.eval(axml2j.translate());
-    if (DEBUG) {
-    System.out.println("Bsh eval of:");
-    System.out.println(axml2j.translate());
-    }
-    // run the assembly
-    BshClassManager bcm = bsh.getClassManager();
-    bcm.dump(new java.io.PrintWriter(System.out));
-    // according to bsh docs, can't reload classes
-    // if not using the addClassPath method, since
-    // Launcher overrides the default bsh loader,
-    // don't do the following:
-    // bcm.reloadAllClasses();
-    // instead, relaunch.
-    if (bcm.classExists(assemblyName)) {
-    System.out.println("Running Assembly "+assemblyName);
-    //bsh.eval(assemblyName+".main(new String[0])");
-    bsh.eval("Thread t = new Thread( new "+assemblyName+"() );");
-    Thread t = (Thread) bsh.get("t");
-    t.start();
-    } else {
-    System.out.println("Can't find Assembly "+assemblyName);
-    }
-    } catch (Exception e) {
-    e.printStackTrace();
-    }
-
-    /*
-     * Above is mostly introspection of below, which only works in command line mode
-     * (ie with classpath set normally)
-     *
-     * to run within a jar of jars it has to be done via introspection.
-     *
-    if (bsh.getClassManager().classExists("simkit.BasicAssembly")) System.out.println("simkit.BasicAssembly found");
-    else System.out.println("simkit.BasicAssembly not found");
-    try {
-    bsh.eval("DEBUG();");
-    // load eventGraph XML as classes
-    // since we've overridden the default bsh ClassLoader, need to
-    // add the defined class in this ClassLoader
-    Enumeration e = eventGraphs.keys();
-    while( e.hasMoreElements() ){
-    String eventGraphName = (String) (e.nextElement());
-    String eventGraph = (String)eventGraphs.get(eventGraphName);
-    bais = new ByteArrayInputStream(eventGraph.getBytes());
-    Class clz = classLoader.loadClass("viskit.xsd.translator.eventgraph.SimkitEventGraphXML2Java");
-    Constructor cnstr = clz.getConstructor( new Class<?>[] { InputStream.class } );
-    //xml2j = new SimkitEventGraphXML2Java(bais);
-    xml2j = (SimkitEventGraphXML2Java)cnstr.newInstance( new Object[] { bais } );
-    xml2j.unmarshal();
-    bsh.eval(xml2j.translate());
-    if (DEBUG) {
-    System.out.println("Bsh eval of:");
-    System.out.println(xml2j.translate());
-    }
-    Class evgc = bsh.getClassManager().classForName(eventGraphName);
-    // add these, since this is going to be the class loader,
-    // and could conflict with the one beanshell last used to
-    // eval the string (?)
-    eventGraphs.put(eventGraphName, evgc);
-    if (DEBUG) System.out.println("Eventgraph class added: "+eventGraphName+ " "+evgc);
-    }
-    // now any and all dependencies are loaded for the assembly
-    bais = new ByteArrayInputStream(assembly.getBytes());
-    Class clz = classLoader.loadClass("viskit.xsd.translator.assembly.SimkitAssemblyXML2Java");
-    Constructor cnstr = clz.getConstructor( new Class<?>[] { InputStream.class } );
-    axml2j = (SimkitAssemblyXML2Java)cnstr.newInstance( new Object[] { bais } );
-    axml2j.unmarshal();
-    bsh.eval(axml2j.translate());
-    if (DEBUG) {
+    if (debug) {
     System.out.println("Bsh eval of:");
     System.out.println(axml2j.translate());
     }
@@ -675,11 +607,11 @@ public class Launcher extends Thread implements Runnable
 
     void launchGUI() {
         try {
-            Class<?> viskitz = classLoader.loadClass("viskit.SplashScreenFrame2");
+            Class<?> viskitz = cloader.loadClass("viskit.Splash2");
             Method m = viskitz.getDeclaredMethod("main", new Class<?>[]{String[].class});
-            m.invoke(null, new Object[]{new String[]{"viskit.ViskitEventGraphAssemblyComboMain"}});
+            m.invoke(null, new Object[]{new String[]{"viskit.EventGraphAssemblyComboMain"}});
         } catch (ClassNotFoundException | NoSuchMethodException | SecurityException | IllegalAccessException | IllegalArgumentException | InvocationTargetException e) {
-            LOG.error(e);
+            log.error(e);
             System.exit(1);
         }
     }
@@ -693,7 +625,7 @@ public class Launcher extends Thread implements Runnable
                 launchAssemblyServer(Integer.parseInt(port));
             }
         } catch (NumberFormatException e) {
-            LOG.error(e);
+            log.error(e);
         }
     }
 
@@ -703,22 +635,22 @@ public class Launcher extends Thread implements Runnable
     // Gridlets also do their own to get PORT and other env
     void launchGridlet() {
         try {
-            Class<?> gridletz = classLoader.loadClass("viskit.gridlet.Gridlet");
+            Class<?> gridletz = cloader.loadClass("viskit.gridlet.Gridlet");
             Method m = gridletz.getDeclaredMethod("main", new Class<?>[]{String[].class});
             m.invoke(null, new Object[]{new String[]{}});
         } catch (ClassNotFoundException | NoSuchMethodException | SecurityException | IllegalAccessException | IllegalArgumentException | InvocationTargetException e) {
-            LOG.error(e);
+            log.error(e);
             System.exit(1);
         }
     }
 
     void launchAssemblyServer(int port) {
         try {
-            Class<?> serverz = classLoader.loadClass("viskit.gridlet.AssemblyServer");
+            Class<?> serverz = cloader.loadClass("viskit.gridlet.AssemblyServer");
             Method m = serverz.getDeclaredMethod("main", new Class<?>[]{String[].class});
             m.invoke(null, new Object[]{new String[]{"-p", "" + port}});
         } catch (ClassNotFoundException | NoSuchMethodException | SecurityException | IllegalAccessException | IllegalArgumentException | InvocationTargetException e) {
-            LOG.error(e);
+            log.error(e);
             System.exit(1);
         }
     }
@@ -736,14 +668,14 @@ public class Launcher extends Thread implements Runnable
             jos.flush();
 
         } catch (IOException ex) {
-            LOG.error(ex);
+            log.error(ex);
         } finally {
             try {
                 if (jos != null) {
                     jos.close();
                 }
             } catch (IOException ex) {
-                LOG.error(ex);
+                log.error(ex);
             }
         }
         return jarOut;
@@ -768,7 +700,7 @@ public class Launcher extends Thread implements Runnable
                     }
                     jos.closeEntry();
                 } catch (IOException ex) {
-                    LOG.error(ex);
+                    log.error(ex);
                 }
             }
         }
